# cpp-template-workspace

./: CMakeLists.txt  LICENSE  README.md
src/: main.cc
src/common/: thread_pool.h
src/example/: example.cc  example.h
src/thread_pool/: ThreadPool.h
test/: test_example.cc
